--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 GOOGLE_API_SECRET=1NUqR0jk7RJJbkdFz-vwnhya6PaBmCRzKVyVkoADl2F0
 FORMSUBMIT_API_SECRET_LOCAL=7d10ecda504f64b7eb9c07dc508dcbc2
+NEXT_PUBLIC_FACEBOOK_PIXEL_ID=526838657800779
+NEXT_PUBLIC_GA_ID=4092535445
+GA_MEASUREMENT_ID=G-81KZDW9XLM
