--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,9 +14,13 @@
     "css-loader": "^6.7.1",
     "googleapis": "^105.0.0",
     "next": "12.2.4",
+    "next-scripts": "^0.3.4",
+    "next-seo": "^5.5.0",
+    "next-sitemap": "^3.1.22",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
+    "react-facebook-pixel": "^1.0.4",
     "react-social-icons": "^5.14.0"
   },
   "devDependencies": {
