instalação do Google Analytics

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-scripts": "^0.3.4",
     "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.22",
+    "nextjs-basic-auth-middleware": "^1.0.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
