inclusão da api sheetdb

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ FORMSUBMIT_API_SECRET_LOCAL=7d10ecda504f64b7eb9c07dc508dcbc2
 NEXT_PUBLIC_FACEBOOK_PIXEL_ID=526838657800779
 NEXT_PUBLIC_GA_ID=4092535445
 GA_MEASUREMENT_ID=G-81KZDW9XLM
+SHEET_DB_ADRESS='https://sheetdb.io/api/v1/b2xrxtt9k6a8o'
+SHEET_DB_LOGIN='if3lfdui'
+SHEET_DB_PASS='9wk4eyd7opy92r9v22fs'
