--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "add": "^2.0.6",
     "axios": "^0.27.2",
+    "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.0",
     "css-loader": "^6.7.1",
     "googleapis": "^105.0.0",
