atualização novo layout e navbar

--- a/package.json
+++ b/package.json
@@ -15,27 +15,17 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "add": "^2.0.6",
     "axios": "^0.27.2",
-    "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.0",
-    "css-loader": "^6.7.1",
-    "googleapis": "^105.0.0",
     "next": "12.2.4",
     "next-scripts": "^0.3.4",
     "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.22",
-    "next-swagger-doc": "^0.3.6",
-    "nextjs-basic-auth-middleware": "^1.0.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
-    "react-facebook-pixel": "^1.0.4",
-    "react-fontawesome": "^1.7.1",
     "react-social-icons": "^5.14.0",
-    "sheetdb-js": "^1.0.3",
-    "sheetdb-node": "^0.0.12",
-    "swagger-ui-react": "^4.14.2"
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "eslint": "8.21.0",
